--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
@@ -16,18 +17,19 @@
     "@react-native-picker/picker": "^2.8.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "expo": "~51.0.26",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.12.5",
+    "firebase": "^10.13.1",
     "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react-dom": "18.2.0",
+    "react-native": "^0.74.5",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.3",
-    "react-native-maps": "1.14.0",
-    "expo-location": "~17.0.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
