--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
     "@react-native-firebase/firestore": "^20.4.0",
-    "@react-native-picker/picker": "^2.8.0",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
@@ -25,7 +27,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.5",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
