--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/fredoka": "^0.2.3",
+    "@expo-google-fonts/lexend-giga": "^0.2.3",
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.2.0",
@@ -21,6 +24,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
     "expo": "~51.0.26",
+    "expo-font": "~12.0.10",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.1",
@@ -33,7 +37,8 @@
     "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-linear-gradient": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
