--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/app": "^20.4.0",
@@ -25,6 +26,7 @@
     "axios": "^1.7.7",
     "expo": "~51.0.26",
     "expo-font": "~12.0.10",
+    "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.1",
@@ -35,10 +37,12 @@
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.14.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "expo-linear-gradient": "~13.0.2"
+    "expo-checkbox": "~3.0.0",
+    "@expo/vector-icons": "^14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
