--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "@expo-google-fonts/lexend-giga": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-runtime": "~3.2.3",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
     "@react-native-firebase/firestore": "^20.4.0",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
@@ -32,7 +32,7 @@
     "firebase": "^10.13.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.5",
+    "react-native": "0.74.5",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -45,7 +45,7 @@
     "@expo/vector-icons": "^14.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
