Mejoras estilo y pruebas

--- a/app.json
+++ b/app.json
@@ -18,13 +18,25 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.aezapata57.MoveIT"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "cdefa999-0069-4176-aa44-56441d49cc3a"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/cdefa999-0069-4176-aa44-56441d49cc3a"
+    }
   }
 }
