--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/lexend-giga": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-runtime": "~3.2.3",
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "8.0.1",
@@ -25,6 +26,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
     "expo": "~51.0.26",
+    "expo-checkbox": "~3.0.0",
     "expo-font": "~12.0.10",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
@@ -41,8 +43,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "expo-checkbox": "~3.0.0",
-    "@expo/vector-icons": "^14.0.3"
+    "expo-updates": "~0.25.27"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
